--- a/public/camera.html
+++ b/public/camera.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/camera.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand|Lilita+One|Montserrat" rel=" stylesheet">
   <script src="js/p5.min.js"></script>
-  <script src="js/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
   <script src="js/ml5.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
