--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
   <div class="page1">
     <div class="side1">
       <div class="heading"><span>EX</span>PRO</span></div>
-      <a href="/camera" class="btn">Get Started</a>
+      <a href="https://hacknsut.abhimonga16.now.sh/public/camera.html" class="btn">Get Started</a>
+      <a href="https://hacknsut.abhimonga16.now.sh/public/ppt.html" style="font-size:35px" class="btn">Presentation</a>
     </div>
     <div class="side2">
       <div id="slide-show" class="activate steps">
