--- a/public/camera.html
+++ b/public/camera.html
@@ -23,7 +23,7 @@
   <div class="loader"></div>
   <div class="counter-flex">
     <div id="counter"><span id="sarthak">0</span> WRAPS DONE</div>
-    <a href="/results" id="results">SEE <span>RESULTS</span></a>
+    <a href="https://hacknsut.abhimonga16.now.sh/public/lb.html" id="results">SEE <span>RESULTS</span></a>
     <img src="./anime.gif">
   </div>
   <script src="./js/sketch.js"></script>
